--- a/index.html
+++ b/index.html
@@ -19,25 +19,28 @@
                 <h2>Lectures</h2>
                 <div class="lecture-list">
                     <div class="lecture-item">
-                        <a href="#" class="toggle-questions" data-target="questions1">Lecture 0: Basics</a>
+                        <a href="" class="toggle-questions" data-target="questions1">Lecture 0: Basics</a>
                     </div>
                     <div class="lecture-item">
-                        <a href="#" class="toggle-questions" data-target="questions2">Lecture 1: STL</a>
+                        <a href="" class="toggle-questions" data-target="questions2">Lecture 1: STL</a>
                     </div>
                     <div class="lecture-item">
-                        <a href="#" class="toggle-questions" data-target="questions3">Lecture 2: Binary Search</a>
+                        <a href="" class="toggle-questions" data-target="questions3">Lecture 2: Binary Search</a>
                     </div>
                     <div class="lecture-item">
-                        <a href="#" class="toggle-questions" data-target="questions4">Lecture 3: Strings & 2D arrays</a>
+                        <a href="" class="toggle-questions" data-target="questions4">Lecture 3: Strings & 2D arrays</a>
                     </div>
                     <div class="lecture-item">
-                        <a href="#" class="toggle-questions" data-target="questions5">Lecture 4: Recursion and Backtracking</a>
+                        <a href="" class="toggle-questions" data-target="questions5">Lecture 4: Recursion and Backtracking</a>
                     </div>
                     <div class="lecture-item">
-                        <a href="#" class="toggle-questions" data-target="questions6">Lecture 5: Linked List</a>
+                        <a href="" class="toggle-questions" data-target="questions6">Lecture 5: Linked List</a>
                     </div>
                     <div class="lecture-item">
-                        <a href="#" class="toggle-questions" data-target="questions7">Lecture 6: Binary Tree</a>
+                        <a href="" class="toggle-questions" data-target="questions7">Lecture 6: Binary Tree</a>
+                    </div>
+                    <div class="lecture-item">
+                        <a href="" class="toggle-questions" data-target="questions8">Lecture 7: More on Stacks & Queues</a>
                     </div>
                     <!-- Add more lecture items as needed -->
                 </div>
@@ -240,6 +243,43 @@
                             </tr>
                             <tr>
                                 <td><a href="https://leetcode.com/problems/binary-tree-inorder-traversal/">Question 12</a></td>
+                            </tr>
+                            <!-- Add more question links as needed -->
+                        </tbody>
+                    </table>
+                </div>
+                <div id="questions8" class="question-table">
+                    <h2>Lecture 7: More on Stacks & Queues</h2>
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>Lecture and Question Links</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td><a href="https://www.youtube.com/live/PPIdmeO8E-Q?feature=shared">Lecture</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="https://leetcode.com/problems/next-greater-element-i/">Question 1</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="https://leetcode.com/problems/trapping-rain-water/">Question 2</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="https://leetcode.com/problems/asteroid-collision/">Question 3</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="https://leetcode.com/problems/remove-k-digits/">Question 4</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="https://leetcode.com/problems/largest-rectangle-in-histogram/">Question 5</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="https://leetcode.com/problems/valid-parentheses/">Question 6</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="https://leetcode.com/problems/sliding-window-maximum/">Question 7</a></td>
                             </tr>
                             <!-- Add more question links as needed -->
                         </tbody>
