--- a/index.html
+++ b/index.html
@@ -42,6 +42,15 @@
                     <div class="lecture-item">
                         <a href="" class="toggle-questions" data-target="questions8">Lecture 7: More on Stacks & Queues</a>
                     </div>
+                    <div class="lecture-item">
+                        <a href="" class="toggle-questions" data-target="questions9">Lecture 8: Binary Search Tree</a>
+                    </div>
+                    <div class="lecture-item">
+                        <a href="" class="toggle-questions" data-target="questions10">Lecture 9: Heaps</a>
+                    </div>
+                    <div class="lecture-item">
+                        <a href="" class="toggle-questions" data-target="questions11">Lecture 10: Graphs</a>
+                    </div>
                     <!-- Add more lecture items as needed -->
                 </div>
             </section>
@@ -281,6 +290,117 @@
                             <tr>
                                 <td><a href="https://leetcode.com/problems/sliding-window-maximum/">Question 7</a></td>
                             </tr>
+                            <!-- Add more question links as needed -->
+                        </tbody>
+                    </table>
+                </div>
+                <div id="questions9" class="question-table">
+                    <h2>Lecture 8: Binary Search Tree</h2>
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>Lecture and Question Links</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td><a href="https://youtu.be/UeRUKRJvPa4?si=q7-8bbCj1r89RsQt">Lecture</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="https://leetcode.com/problems/search-in-a-binary-search-tree/">Question 1</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="https://practice.geeksforgeeks.org/problems/implementing-ceil-in-bst/1">Question 2</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="https://leetcode.com/problems/insert-into-a-binary-search-tree/">Question 3</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="https://leetcode.com/problems/kth-smallest-element-in-a-bst/">Question 4</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="https://leetcode.com/problems/validate-binary-search-tree/">Question 5</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="https://leetcode.com/problems/inorder-successor-in-bst/">Question 6</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="https://practice.geeksforgeeks.org/problems/largest-bst/1">Question 7</a></td>
+                            </tr>
+                            <!-- Add more question links as needed -->
+                        </tbody>
+                    </table>
+                </div>
+                <div id="questions10" class="question-table">
+                    <h2>Lecture 9: Heaps</h2>
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>Lecture and Question Links</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td><a href="https://youtu.be/NKJnHewiGdc?si=Y0E5JPP8qOlsA09L">Lecture</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="https://bit.ly/3TSxAHd">Question 1</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="https://leetcode.com/problems/kth-largest-element-in-an-array/">Question 2</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="https://bit.ly/3PvAOhK">Question 3</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="https://bit.ly/3QLpaAs">Question 4</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="https://bit.ly/3QVb1jR">Question 5</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="https://www.geeksforgeeks.org/problems/maximum-sum-combination/1">Question 6</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="https://leetcode.com/problems/find-median-from-data-stream/">Question 7</a></td>
+                            </tr>
+                            <!-- Add more question links as needed -->
+                        </tbody>
+                    </table>
+                </div>
+                <div id="questions11" class="question-table">
+                    <h2>Lecture 10: Graphs</h2>
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>Lecture and Question Links</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td><a href="https://youtu.be/MEpBQ4YghAM?feature=shared">Lecture 1</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="https://youtu.be/dCvnjapI6ik?feature=shared">Lecture 2</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="https://youtu.be/0ql7lZS2qt0?feature=shared">Lecture 3</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="https://youtu.be/UPfUFoWjk5w?feature=shared">Lecture 4</a></td>
+                            </tr>
+                            <!-- <tr>
+                                <td><a href="https://bit.ly/3QLpaAs">Question 4</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="https://bit.ly/3QVb1jR">Question 5</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="https://www.geeksforgeeks.org/problems/maximum-sum-combination/1">Question 6</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="https://leetcode.com/problems/find-median-from-data-stream/">Question 7</a></td>
+                            </tr> -->
                             <!-- Add more question links as needed -->
                         </tbody>
                     </table>
