--- a/index.html
+++ b/index.html
@@ -389,18 +389,54 @@
                             <tr>
                                 <td><a href="https://youtu.be/UPfUFoWjk5w?feature=shared">Lecture 4</a></td>
                             </tr>
-                            <!-- <tr>
-                                <td><a href="https://bit.ly/3QLpaAs">Question 4</a></td>
+                            <tr>
+                                <td><a href="https://youtu.be/GLxfoaZlRqs?feature=shared">Lecture 5</a></td>
                             </tr>
                             <tr>
-                                <td><a href="https://bit.ly/3QVb1jR">Question 5</a></td>
+                                <td><a href="https://youtu.be/Zbbe9FYVnM4?feature=shared">Lecture 6</a></td>
                             </tr>
                             <tr>
-                                <td><a href="https://www.geeksforgeeks.org/problems/maximum-sum-combination/1">Question 6</a></td>
+                                <td><a href="https://youtu.be/XMiIk1B0v-w?feature=shared">Lecture 7</a></td>
                             </tr>
                             <tr>
-                                <td><a href="https://leetcode.com/problems/find-median-from-data-stream/">Question 7</a></td>
-                            </tr> -->
+                                <td><a href="https://youtu.be/kXiqvMykeJA?feature=shared">Lecture 8</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="https://youtu.be/wjxCG6dOwcY?feature=shared">Lecture 9</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="https://youtu.be/RiWE52X5wdQ?feature=shared">Lecture 10</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="https://youtu.be/Kptz-NVA2RE?feature=shared">Lecture 11</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="https://youtu.be/TbzANA0ErDo?feature=shared">Lecture 12</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="https://leetcode.com/problems/number-of-provinces">Question 1</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="https://leetcode.com/problems/course-schedule/">Question 2</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="https://practice.geeksforgeeks.org/problems/topological-sort/1">Question 3</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="https://leetcode.com/problems/number-of-islands/">Question 4</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="https://practice.geeksforgeeks.org/problems/implementing-dijkstra-set-1-adjacency-matrix/1">Question 5</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="https://practice.geeksforgeeks.org/problems/distance-from-the-source-bellman-ford-algorithm/0/?fbclid=IwAR2_lL0T84DnciLyzMTQuVTMBOi82nTWNLuXjUgahnrtBgkphKiYk6xcyJU">Question 6</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="https://practice.geeksforgeeks.org/problems/implementing-floyd-warshall2042/1">Question 7</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="https://practice.geeksforgeeks.org/problems/minimum-spanning-tree/1">Question 8</a></td>
+                            </tr>
                             <!-- Add more question links as needed -->
                         </tbody>
                     </table>
